@@ -1,0 +1,9 @@
+package com.gmail.nossr50.events.skills.unarmed;
+
+import org.bukkit.entity.Player;
+
+public class McMMOPlayerDeflectEvent extends McMMOPlayerUnarmedEvent {
+    public McMMOPlayerDeflectEvent(Player player) {
+        super(player);
+    }
+}
