@@ -39,6 +39,7 @@ Version 1.4.07
  + Added new /mccooldowns command to show all ability cooldowns
  + Commands may now both print text and display a scoreboard
  + Killing a custom entity will automatically add it to the custom entity config file with default values.
+ = Fixed McMMOPlayerDisarmEvent reporting the skill level of the defending player, not the attacking player.
  = Fixed bug where arrow retrieval was not properly detecting entities that already existed in the tracker
  = Fixed bug which allowed players to bypass fishing's exploit prevention
  = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
